# CORTEX

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  CAUSAL_DEMO.md  DESIGN_PRINCIPLES.md  INSTALLATION.md
examples/: README.md  __init__.py  alignment_pipeline.py  causal_demo.py  predictive_hierarchy.py  scm.py  theory_of_mind.py
src/: __init__.py  data_contracts.py  enums.py  infra_audit.py  infra_gnn_bridge.py  infra_human_oversight.py  infra_locus_coeruleus.py  infra_uncertainty.py  r10_theory_of_mind.py  r1_thalamus_pulvinar.py  r2_dlpfc.py  r3_hippocampus.py  r4_pfc.py  r5_caudate.py  r6_cerebellum.py  r7_acc.py  r8_motor_cortex.py  r9_default_mode_network.py
