[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex2"
version = "2.0.0-skeleton"
description = "CORTEX-2 reference Python skeleton — The Predictive Brain"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
    { name = "Office of Strategic Technology Assessment" },
]
keywords = ["agi", "cognitive-architecture", "predictive-coding",
            "active-inference", "theory-of-mind", "causal-discovery"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The skeleton itself has zero runtime deps. Phase 0+ implementation
# adds the production deps below as optional extras.
dependencies = []

[project.optional-dependencies]
# Phase 0 — predictive coding scaffolding
phase0 = [
    "numpy>=1.24",
    "torch>=2.1",
    "scipy>=1.11",
]
# Phase 1 — dual-process + sparse routing
phase1 = [
    "transformers>=4.40",
    "sentence-transformers>=2.6",
]
# Phase 2 — ToM + active inference
phase2 = [
    "pymdp>=0.0.7.1",
]
# Phase 3 — causal discovery + glymphatic
phase3 = [
    "causal-learn>=0.1.3.6",
    "lingam>=1.8.3",
    "dowhy>=0.11",
]
# Multi-modal stack (cross-cutting)
multimodal = [
    "openai-whisper>=20240930",
    "Pillow>=10.0",
]
# Memory backends
memory = [
    "neo4j>=5.18",
    "qdrant-client>=1.8",
]
# Reasoning backends
reasoning = [
    "z3-solver>=4.13",
]
# Full implementation (everything)
all = [
    "numpy>=1.24", "torch>=2.1", "scipy>=1.11",
    "transformers>=4.40", "sentence-transformers>=2.6",
    "pymdp>=0.0.7.1",
    "causal-learn>=0.1.3.6", "lingam>=1.8.3", "dowhy>=0.11",
    "openai-whisper>=20240930", "Pillow>=10.0",
    "neo4j>=5.18", "qdrant-client>=1.8",
    "z3-solver>=4.13",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.urls]
"Architecture" = "internal://CORTEX-ARCH-002"
"Roadmap"      = "internal://CORTEX-ROAD-001"
"Demo"         = "internal://CORTEX-DEMO-002"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex2*"]

[tool.mypy]
python_version = "3.9"
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # stubs raise NotImplementedError
ignore_missing_imports = true
